<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.intq.user.vm.UserViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="140dp"
                    android:background="@drawable/my_card_bg"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <TextView
                        android:id="@+id/me_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:gravity="center"
                        android:text="@string/defaultName"
                        android:textColor="@color/commdity_text_color"
                        android:textSize="14sp" />

                    <RelativeLayout
                        android:id="@+id/me_info"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="70dp"
                        android:layout_marginRight="24dp"
                        android:onClick="@{()->vm.info()}">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentLeft="true"
                            android:src="@drawable/my_icon_information_n"
                            android:layout_alignParentStart="true"
                            android:contentDescription="@string/personal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/personal"
                            android:textColor="@color/commdity_text_color"
                            android:textSize="14sp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="44dp" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/me_circle"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="24dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:src="@drawable/my_icon_circle_n"
                            android:contentDescription="@string/star" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="44dp"
                            android:text="@string/star"
                            android:textColor="@color/commdity_text_color"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/me_foot"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="24dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:src="@drawable/my_icon_foot_n"
                            android:contentDescription="@string/history" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="44dp"
                            android:text="@string/history"
                            android:textColor="@color/commdity_text_color"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/me_setting"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="25dp"
                        android:onClick="@{()->vm.info()}"
                        android:layout_marginRight="24dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:src="@drawable/my_icon_wallet_n"
                            android:contentDescription="@string/setting" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="44dp"
                            android:text="@string/setting"
                            android:textColor="@color/commdity_text_color"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/logout_btn"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="@dimen/dip_20"
                        android:layout_marginRight="30dp"
                        android:onClick="@{()->vm.logout()}"
                        android:background="@android:color/holo_red_light"
                        android:text="@string/quit"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/me_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignTop="@+id/line1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-40dp"
                    android:onClick="@{()->vm.dataShare()}"
                    fresco:roundAsCircle="true" />

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>
</layout>